advanced coding plus mac fix